# machine-learning-e2e

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  setup.py
notebooks/student-performance/: eexploratory-data-analysis.ipynb  exploratory-data-analysis.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
templates/: home.html  index.html
