[project]
name = "project-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "catboost>=1.2.8",
    "dill>=0.4.0",
    "flask>=3.1.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
]
